@@ -23,27 +23,36 @@ public class PostService {
         List<PostEntity> postEntityList = postRepository.findAll();
 
         return postEntityList.stream()
-                .map(Post::from)
-                .collect(Collectors.toList());
+                .map(i -> Post.from(i, companyRepository.findById(i.getCompanyId()).orElseThrow(IllegalArgumentException::new).getCompanyName()))
+                .toList();
     }
 
     public PostWithOtherPosts getPost(Long postId) {
         PostEntity postEntity = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
+        Company company = companyRepository.findById(postEntity.getCompanyId()).orElseThrow(IllegalArgumentException::new);
+        List<PostEntity> postEntities = postRepository.findAllByCompanyId(postEntity.getCompanyId());
 
-        return PostWithOtherPosts.from(postEntity);
+        List<Long> otherPostIds = postEntities.stream()
+                .map(PostEntity::getId)
+                .filter(id -> !id.equals(postEntity.getId()))
+                .collect(Collectors.toList());
+
+        return PostWithOtherPosts.from(postEntity, otherPostIds, company);
     }
 
+    @Transactional
     public Post createPost(Long companyId, Post post) {
         Company company = companyRepository.findById(companyId).orElseThrow(IllegalArgumentException::new);
-        PostEntity postEntity = post.toEntity(company);
+        PostEntity postEntity = post.toEntity(companyId);
         postRepository.save(postEntity);
 
-        return Post.from(postEntity);
+        return Post.from(postEntity, company.getCompanyName());
     }
 
     @Transactional
     public Post editPost(Long postId, Post post) {
         PostEntity postEntity = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
+        Company company = companyRepository.findById(postEntity.getCompanyId()).orElseThrow(IllegalArgumentException::new);
         PostEntityUpdatePolicy updatePolicy = PostEntityUpdatePolicy.builder()
                 .position(post.position())
                 .skill(post.skill())
@@ -51,9 +60,10 @@ public class PostService {
                 .build();
         PostEntity editPostEntity = postEntity.edit(updatePolicy);
 
-        return Post.from(editPostEntity);
+        return Post.from(editPostEntity, company.getCompanyName());
     }
 
+    @Transactional
     public void deletePost(Long postId) {
         PostEntity postEntity = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
         postRepository.delete(postEntity);
